--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,29 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/bcpkix-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/bcprov-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/commons-compress-1.21.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/dec-0.1.2.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/docker-java-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/docker-java-api-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/docker-java-core-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/docker-java-transport-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/docker-java-transport-httpclient5-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/gson-2.10.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/guava-19.0.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/httpclient5-5.1.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/httpcore5-5.1.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/httpcore5-h2-5.1.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/jackson-annotations-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/jackson-core-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/jackson-databind-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/jcl-over-slf4j-1.7.30.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/jna-5.8.0.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/slf4j-api-2.0.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManage/webdrivermanager-5.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
