--- a/.classpath
+++ b/.classpath
@@ -9,8 +9,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libSelenium/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libSelenium/testng-6.14.3.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/bcpkix-jdk15on-1.64.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/bcprov-jdk15on-1.64.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/commons-codec-1.15.jar"/>
@@ -31,9 +31,17 @@
 	<classpathentry kind="lib" path="libWebDriverManage/jackson-annotations-2.10.3.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/jackson-core-2.10.3.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/jackson-databind-2.10.3.jar"/>
-	<classpathentry kind="lib" path="libWebDriverManage/jcl-over-slf4j-1.7.30.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/jna-5.8.0.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/slf4j-api-2.0.3.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManage/webdrivermanager-5.3.1.jar"/>
+	<classpathentry kind="lib" path="libLog4j/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="libLog4j/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libLog4j/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="libLog4j/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libLog4j/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libReportNG/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="libReportNG/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="libReportNG/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libReportNG/velocity-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
